@@ -13,9 +13,9 @@ routines in the ZX ROM.
 
 0x0010: Print a character
 	Character classes supported: Comma control (0x06), Newline (0x0d), INK/PAPER
-	controls (except pseudo-colours 8 and 9), FLASH / BRIGHT controls (except
-	'transparent' setting), AT and TAB controls, standard characters (0x20-0x7f;
-	includes customised fonts), user-defined graphics.
+	controls, FLASH / BRIGHT controls (except 'transparent' setting), AT and TAB
+	controls, standard characters (0x20-0x7f; includes customised fonts),
+	user-defined graphics.
 	Not supported: cursor / backspace controls, INVERSE / OVER controls, block
 	graphics, keyword tokens.
 	Does not handle scrolling upon reaching the bottom of the screen.
@@ -69,8 +69,8 @@ routines in the ZX ROM.
 
 BASIC commands supported
 ------------------------
-	INK (except INK 8 / 9)
-	PAPER (except PAPER 8 / 9)
+	INK
+	PAPER
 	OUT
 	STOP
 	NEW
@@ -107,3 +107,12 @@ Expression support
 		Functions:
 			IN, PEEK, USR (numeric)
 		  Others parsed but not evaluated (arguments not parsed)
+
+Known bugs
+----------
+INK 9 (and PAPER 9) currently works by selecting either black or white based on
+the current paper colour, and then behaving identically to INK 0 / INK 7
+respectively. However, the original ROM appears to set a flag to permanently
+record the 'contrasting INK' mode: thus PAPER 2: INK 9: PAPER 6 will result in
+black ink on yellow paper on the original ROM, but white ink on yellow on
+OpenZXRom.
