@@ -23,9 +23,15 @@
 ; Postal address: 14 Daisy Hill Drive, Adlington, Chorley,
 ;                 Lancs, PR6 9NE, United Kingdom
 
-			fillto 0x203c
+			fillto 0x2030
+print_string_permanent
+; print bc characters starting from address de, using permanent attributes
+			ld a,(perm_attribute)	; copy permanent attribute variables to temporary ones
+			ld (temp_attribute),a
+			ld a,(perm_mask)
+			ld (temp_mask),a
+; 0x203c: print bc characters starting from address de
 print_string
-; print bc characters starting from address de
 			ld a,b
 			or c
 			dec bc
